--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     env_file:
       - .env
     restart: unless-stopped
-    volumes_from:
+    volumes:
       - pgdata:/var/lib/postgresql/data
 
   backend:
@@ -12,6 +12,10 @@ services:
     restart: unless-stopped
     ports:
       - "127.0.0.1:8200:8000"
+    depends_on:
+      - postgres
+    env_file:
+      - .env
 
 volumes:
   pgdata:
