--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  postgres:
+  db:
     image: "postgres:17.2-alpine3.20"
     env_file:
       - .env
@@ -7,13 +7,13 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
-  backend:
+  webserver:
     build: .
     restart: unless-stopped
     ports:
       - "127.0.0.1:8200:8000"
     depends_on:
-      - postgres
+      - db
     env_file:
       - .env
 
