--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-colorfield = "^0.11.0"
 djangorestframework = "^3.15.2"
 python-dateutil = "^2.9.0.post0"
 mozilla-django-oidc = "^4.0.1"
+django-filter = "^25.1"
 
 
 [tool.poetry.group.prod.dependencies]
